--- a/src/locale/bg.json
+++ b/src/locale/bg.json
@@ -25,6 +25,16 @@
     "TITLE": "Потвърждение по имейл",
     "CONTENT": "На вашия имейл адрес е изпратено съобщение за потвърждение. Моля, въведете ПИН кода от този имейл по-долу"
   },
+  "DE_IDENTIFICATION": {
+        "DE_IDENTIFY_ME": "Де-идентифицирай ме",
+        "DE_IDENTIFY_PIN": "Де-идентифицирай ПИН",
+        "CONTENT": "Вярваме във Вашето право да контролирате данните, събирани от нашия сайт. Следователно, за да де-идентифицирате записаните си действия в сайта, моля въведете имейл адреса си по-долу. След това ще ви изпратим ПИН-код, който да потвърди вашия профил. Щом въведете този ПИН-код, системата ни ще започне да прави анонимни всичките ви действия в сайта.",
+        "CONTENT_VERIFIED": "Вярваме във Вашето право да контролирате данните, събирани от нашия сайт. Следователно, за да де-идентифицирате записаните си действия в сайта, моля потвърдете самоличността си по-долу. След това системата ни ще започне да прави анонимни всичките ви действия в сайта.",
+        "CONTENT_PIN": "Съобщение за потвърждение беше изпратено до вашия имейл адрес. Моля, въведете ПИН-кода от имейла по-долу.",
+        "CONFIRM_PIN": "Щом ПИН-кодът бъде потвърден, ще започнем процеса по де-идентифициране.",
+        "GET_NEW_PIN": "Не сте получили ПИН-код за потвърждение? Проверете папката за спам съобщения или натиснете %BUTTON% за изпращане на нов код.",
+        "NEW_PIN_BUTTON": "натиснете тук"
+    },
   "FORGOT_PASSWORD": {
     "TITLE": "Забравена парола",
     "CONTENT": "Въведете имейла, който сте регистрирали при нас"
@@ -38,6 +48,7 @@
     "CONTENT_2": "Моля, проверете папката си със спам",
     "CONTENT_OR": "или ",
     "CONTENT_3": "за нов код",
+	"CONTENT": "Не сте получили ПИН-код за потвърждение? <br/>Моля, проверете папката за спам съобщения<br/> или натиснете %BUTTON% за изпращане на нов код.",
     "BUTTON": "Натисни тук"
   },
   "RESET_PASSWORD": {
@@ -67,7 +78,29 @@
     "SIGN_IN": "Впиши се",
     "WITH": "с",
     "W_": "w/",
-    "WITH_EMAIL": "Влезте с имейл"
+    "WITH_EMAIL": "Влезте с имейл",
+	"DEIDENTIFY": "Де-идентифициране на %NAME%",
+        "BRAND": {
+            "GOOGLE": "Google",
+            "FACEBOOK": "Facebook",
+            "MICROSOFT": "Microsoft",
+            "LINKEDIN": "LinkedIn",
+            "TWITTER": "Twitter",
+            "QUICKBOOKS": "QuickBooks",
+            "GITHUB": "GitHub",
+            "SLACK": "Slack",
+            "BASECAMP": "Basecamp",
+            "DROPBOX": "Dropbox",
+            "SHOPIFY": "Shopify",
+            "EVERNOTE": "Evernote",
+            "PLANNINGCENTER": "център за плануване",
+            "FITBIT": "fitbit",
+            "APPLE": "Apple",
+            "TWITCH": "twitch",
+            "SALESFORCE": "Salesforce",
+            "OKTA": "Okta",
+            "ONELOGIN": "OneLogin"
+        }
   },
   "BUTTON": {
     "SIGN_IN_METHOD": "Други методи за влизане",
@@ -95,7 +128,10 @@
     "OR_SIGN_UP_WITH_EMAIL_AND_PASSWORD": "Или се регистрирайте с вашия имейл адрес и парола",
     "CONTINUE_WITH_EMAIL": "или въведете вашия имейл адрес по-долу",
     "MORE_INFO": "повече информация",
-    "START_WITH_EMAIL_ADDRESS": "Започнете с вашия имейл адрес по -долу"
+    "START_WITH_EMAIL_ADDRESS": "Започнете с вашия имейл адрес по -долу",
+    "CONFIRM_PIN": "Потвърди ПИН",
+    "DE_IDENTIFY_ME": "Де-идентифицирай ме",
+    "SWITCH_DE_IDENTIFY": "Де-идентифицирай друг имейл адрес?"
   },
   "HOVER": {
     "EMAIL_MATCH": "Моля, уверете се, че имейл адресът, който използвате при влизане, е този, който е поканен да се регистрира.",
@@ -190,14 +226,29 @@
   "TOC_PRIVACY": {
     "CONTENT_ALL": "С регистрацията, влизането или продължаването си приемам <a href='%TOC_LINK%' target='_blank'>Общите условия</a> и <a href='%PRIVACY_LINK%' target='_blank'>политиката за поверителност на %APP_NAME%</a>",
     "CONTENT_TOC": "С регистрацията, влизането или продължаването, приемам <a href='%TOC_LINK%' target='_blank'>Общите условия на %APP_NAME%</a>",
-    "CONTENT_PRIVACY": "С регистрацията, влизането или продължаването приемам <a href='%PRIVACY_LINK%' target='_blank'>Декларацията за поверителност на %APP_NAME%</a>"
+    "CONTENT_PRIVACY": "С регистрацията, влизането или продължаването приемам <a href='%PRIVACY_LINK%' target='_blank'>Декларацията за поверителност на %APP_NAME%</a>",
+	"NAMELESS_CONTENT_ALL": "Създавайки профил, вписвайки се в него или продължавайки се съгласявам с <a href='%TOC_LINK%' target='_blank'>Общите условия</a> и <a href='%PRIVACY_LINK%' target='_blank'>Политиката за поверителност на личните данни</a>",
+    "NAMELESS_CONTENT_TOC": "Създавайки профил, вписвайки се в него или продължавайки се съгласявам с <a href='%TOC_LINK%' target='_blank'>Общите условия</a>",
+    "NAMELESS_CONTENT_PRIVACY": "Създавайки профил, вписвайки се в него или продължавайки се съгласявам с <a href='%PRIVACY_LINK%' target='_blank'>Политиката за поверителност на личните данни</a>"
   },
+    "MAGIC_LINK": {
+        "SEND_BUTTON_TEXT": "Изпрати Магически линк",
+        "LEAVE_MAGIC_LINK": "Вписване чрез избор на IDP или чрез използване на Вашия имейл и парола",
+        "CHECK_YOUR_EMAIL": "Проверете своя имейл",
+        "CHECK_YOUR_EMAIL_2": "%FIRST_NAME%, проверете своя имейл",
+        "CONFIRMING": "Продължава потвърждението на самоличността",
+        "LOGGING_IN": "Вписваме ви",
+        "CONFIRM_MESSAGE": "Изпратихме ви линк на имейл адреса по-горе, за да потвърдим профила ви. Натиснете върху линка, за да завършите вписването.",
+        "FOCUS_MASK_TEXT": "Започнете с имейл адреса си по-горе"
+    },
   "UI": {
-    "LOGOUT": "Logout",
-    "LOGIN": "Login",
-    "SIGNUP_IN": "Sign up / in",
-    "HELLO": "Hello, %FIRST_NAME%",
-    "SIGN_IN_TITLE": "You are currently signed in as",
-    "SIGN_OUT": "SIGN OUT"
+    "LOGOUT": "излез от профила си",
+    "LOGIN": "Влизане",
+    "SIGNUP_IN": "Регистрирай се",
+    "HELLO": "Здравейте, %FIRST_NAME%",
+    "SIGN_IN_TITLE": "в момента сте влезли",
+    "NEWSLETTER_THANK": "Благодарим ви, %NAME%, вече сте отписани",
+    "NEWSLETTER_SUBSCRIBE": "Абонирай се",
+    "SIGN_OUT": "отписване"
   }
 }
