--- a/src/locale/uk.json
+++ b/src/locale/uk.json
@@ -25,6 +25,16 @@
         "TITLE": "Підтвердження електронної адреси",
         "CONTENT": "На вашу електронну адресу надіслано повідомлення з підтвердженням. Уведіть PIN-код із цього електронного листа нижче"
     },
+    "DE_IDENTIFICATION": {
+        "DE_IDENTIFY_ME": "Деідентифікувати мене",
+        "DE_IDENTIFY_PIN": "Деідентифікація PIN-коду",
+        "CONTENT": "Ми віримо у ваше право контролювати дані, зібрані на нашому веб-сайті. Тому, щоб деідентифікувати записи про вашу взаємодію з нашим веб-сайтом, будь ласка, введіть свою адресу електронної пошти нижче. Потім ми надішлемо вам PIN-код для підтвердження вашого акаунту. Після того, як ви введете цей PIN-код, наша система розпочне процес анонімізації ваших взаємодій.",
+        "CONTENT_VERIFIED": "Ми віримо у ваше право контролювати дані, зібрані на нашому веб-сайті. Тому, щоб деідентифікувати записи про вашу взаємодію з нашим веб-сайтом, будь ласка, автентифікуйтеся нижче. Після того, як ви пройдете автентифікацію, наша система розпочне процес анонімізації ваших взаємодій.",
+        "CONTENT_PIN": "На вашу електронну адресу надіслано повідомлення з підтвердженням. Будь ласка, введіть PIN-код з цього електронного листа нижче",
+        "CONFIRM_PIN": "Коли ваш PIN-код буде підтверджено, ми розпочнемо процес деідентифікації.",
+        "GET_NEW_PIN": "Не отримали свій PIN-код підтвердження? Будь ласка, перевірте свою папку зі спамом або %BUTTON% на наявність нового коду",
+        "NEW_PIN_BUTTON": "натисніть тут"
+    },
     "FORGOT_PASSWORD": {
         "TITLE": "Не пам'ятаю пароль",
         "CONTENT": "Уведіть електронну адресу, яку ви в нас зареєстрували, і ми надішлемо вам інструкції щодо відновлення пароля"
@@ -69,6 +79,7 @@
         "WITH": "за допомогою",
         "W_": "w/",
         "WITH_EMAIL": "Увійти за допомогою електронної адреси",
+		"DEIDENTIFY": "Деідентифікувати %NAME%",
         "BRAND": {
             "GOOGLE": "Google",
             "FACEBOOK": "Facebook",
@@ -117,6 +128,9 @@
         "OR_SIGN_UP_WITH_EMAIL_AND_PASSWORD": "Або зареєструйтеся за допомогою вашої електронної адреси та пароля",
         "CONTINUE_WITH_EMAIL": "або введіть вашу електронну адресу нижче",
         "MORE_INFO": "більше інформації",
+        "CONFIRM_PIN": "Підтвердити PIN-код",
+        "DE_IDENTIFY_ME": "Деідентифіквати мене",
+        "SWITCH_DE_IDENTIFY": "Деідентифікувати іншу адресу електронної пошти?",
         "START_WITH_EMAIL_ADDRESS": "Почніть із електронною адресою нижче"
     },
     "HOVER": {
@@ -213,7 +227,10 @@
     "TOC_PRIVACY": {
         "CONTENT_ALL": "Реєструючись, здійснюючи вхід чи продовжуючи, я приймаю <a href='%TOC_LINK%' target='_blank'>Умови використання</a> та <a href='%PRIVACY_LINK%' target='_blank'>Політику конфіденційності</a> %APP_NAME%",
         "CONTENT_TOC": "Реєструючись, здійснюючи вхід чи продовжуючи, я приймаю <a href='%TOC_LINK%' target='_blank'>Умови використання</a> %APP_NAME%",
-        "CONTENT_PRIVACY": "Реєструючись, здійснюючи вхід чи продовжуючи, я приймаю <a href='%PRIVACY_LINK%' target='_blank'>Політику конфіденційності</a> %APP_NAME%"
+        "CONTENT_PRIVACY": "Реєструючись, здійснюючи вхід чи продовжуючи, я приймаю <a href='%PRIVACY_LINK%' target='_blank'>Політику конфіденційності</a> %APP_NAME%",
+        "NAMELESS_CONTENT_ALL": "Реєструючись, входячи або продовжуючи, я приймаю <a href='%TOC_LINK%' target='_blank'>Умови використання</a> та <a href='%PRIVACY_LINK%' target='_blank'>Політику конфіденційності</a>",
+        "NAMELESS_CONTENT_TOC": "Реєструючись, входячи чи продовжуючи, я приймаю <a href='%TOC_LINK%' target='_blank'>Умови використання</a>",
+        "NAMELESS_CONTENT_PRIVACY": "Реєструючись, входячи або продовжуючи, я приймаю <a href='%PRIVACY_LINK%' target='_blank'>Політику конфіденційності</a>"
     },
     "UI": {
         "LOGOUT": "Вихід",
@@ -221,7 +238,9 @@
         "SIGNUP_IN": "Реєстрація / вхід",
         "HELLO": "Добрий день, %FIRST_NAME%",
         "SIGN_IN_TITLE": "Наразі ви увійшли як",
-        "SIGN_OUT": "ВИХІД"
+        "SIGN_OUT": "ВИХІД",
+        "NEWSLETTER_THANK": "Дякую, %NAME%, тепер ви підписані",
+        "NEWSLETTER_SUBSCRIBE": "Підписатися"
     },
     "MAGIC_LINK": {
         "SEND_BUTTON_TEXT": "Надіслати магічне посилання",
